# ATLAS-Autonomous-Theory-Learning-through-Adaptive-Search

./: .gitignore  ARCHITECTURE.md  ATLAS_proposal.md  CLAUDE.md  README.md  anti_cheating_audit.md  literature_survey.md  pyproject.toml
archive/: ATLAS_framework_v1.md  ATLAS_self_critique.md  ATLAS_v5_final_summary.md  brainstorm_final.md  brainstorm_v1.md  brainstorm_v2_full_framework.md  brainstorm_v3_refinement.md  brainstorm_v4_dreamcoder_integration.md  brainstorm_v5_K_measurement.md  critique_and_v3_improvements.md  framework_discovery_analysis.md  phase_plan.md  report_v2_wave_particle_duality.md  report_wave_particle_duality_discovery.md
atlas/: __init__.py  types.py
atlas/agent/: __init__.py  atlas_agent.py  dsl_state.py
atlas/analysis/: __init__.py  concepts.py  diagnostics.py  pslq_unifier.py
atlas/data/: __init__.py  dataset.py
atlas/dsl/: __init__.py  canonicalize.py  expr.py  operators.py  serialize.py
atlas/environments/: __init__.py  alt_physics.py  base.py  env_01.py  env_01_photoelectric.py  env_02.py  env_02_compton.py  env_03.py  env_03_electron_diffraction.py  env_04.py  env_04_double_slit.py  env_05.py  env_05_blackbody.py  env_06.py  env_06_hydrogen_spectrum.py  env_07.py  env_07_stern_gerlach.py  env_08.py  env_08_water_wave.py  env_09.py  env_09_elastic_collision.py  env_10.py  env_10_spring.py  env_11.py  env_11_freefall.py  env_12.py  env_12_heat_conduction.py  normalizer.py  registry.py
atlas/multi_agent/: __init__.py  assignment.py  (+3 more)
tests/: test_integration.py
validation/: phase0_scinet_sr_bridge.py  phase1_classical.py
(+66 files in other folders)
